Correction sur la gestion du type Liste en tant qu'enfant

--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -89,10 +89,10 @@ endif ?>
         <div class="span4 infos-champ">
             <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
                 <div>
-                    <?= $this->formChamp->nom_champ ?>
+                    <?= $this->formChamp->nom_champ_enfant ?>
                 </div>
                 <div>
-                    <?= $this->formChamp->type_champ ?>
+                    <?= $this->formChamp->type_champ_enfant ?>
                 </div>
                 <?= $this->formChamp->ID_CHAMP_PARENT ?>
                 <?= $this->formChamp->rubrique ?>
