--- a/application/views/scripts/formulaire/partials/partial-form-custom.phtml
+++ b/application/views/scripts/formulaire/partials/partial-form-custom.phtml
@@ -1,6 +1,7 @@
-<?php foreach ($this->corpsformulaire as $rubrique) : ?>
-    <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($this->rubriquedisplay[$rubrique['ID_RUBRIQUE']]['DISPLAY']) === false ? 'hide' : '' ?>">
+<?php foreach ($this->rubriques as $rubrique) : ?>
+    <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
         <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
+
         <?php if (empty($rubrique['CHAMPS'])): ?>
             <?=
                 $this->partial('formulaire/partials/partial-information-manquante.phtml', [
@@ -16,7 +17,7 @@
                     <div class='controls'>
                         <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
                             'champ' => $champ,
-                            'valeurformulaire' => $this->valeurformulaire,
+                            'champsvaleurliste' => $this->champsvaleurliste,
                             'canWrite' => isset($this->canWrite) ? $this->canWrite : false
                         ]); ?>
                     </div>
