--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -10,9 +10,8 @@
 
     <div id='affichage-informations' class='form-horizontal'>
         <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
-            'corpsformulaire' => isset($this->corpsformulaire) ? $this->corpsformulaire : array(),
-            'valeurformulaire' => isset($this->valeurformulaire) ? $this->valeurformulaire : array(),
-            'rubriquedisplay' => $this->rubriques,
+            'rubriques' => $this->rubriques,
+            'champsvaleurliste' => $this->champsvaleurliste,
             'canWrite' => false
         ]); ?>
     </div>
