--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -181,18 +181,25 @@ foreach($this->membresFiles as $val => $membre){
 									//Si le champ est un champ Parent alors ....
 									if($champ['ID_TYPECHAMP'] === 6){
 										foreach ($champ['FILS'] as $champFils) {
-											addChamp(
-												$odf,
-												$serviceUtils->getFullFusionName(
-													$formulaire['NOM_INTERNE'],
-													[
-														$rubrique['NOM'],
-														$champ['NOM'],
-														$champFils['NOM']
-													]
-												),
-												'Case à cocher' === $champFils['TYPE'] ? ((isset($champFils['VALEUR']) ? boolval($champFils['VALEUR']) : false) ? 'Oui' : 'Non' ) : $champFils['VALEUR']
-											);
+											if ('Case à cocher' === $champFils['TYPE']) {
+                                                if (true === boolval($champFils['VALEUR'])) {
+                                                    $champFils['VALEUR'] = 'Oui';
+                                                } else {
+                                                    $champFils['VALEUR'] = 'Non';
+                                                }
+                                            }
+                                            addChamp(
+                                                $odf,
+                                                $serviceUtils->getFullFusionName(
+                                                    $formulaire['NOM_INTERNE'],
+                                                    [
+                                                        $rubrique['NOM'],
+                                                        $champ['NOM'],
+                                                        $champFils['NOM']
+                                                    ]
+                                                ),
+                                                $champFils['VALEUR']
+                                            );
 										}
 									}else{
 										// Définition du libellé pour les cases à cocher
@@ -214,7 +221,7 @@ foreach($this->membresFiles as $val => $membre){
 											),
 											$champ['VALEUR']
 										);
-									}																		
+									}
                                 }
                             }
                         }
