On ne retourne pas tout l'historique

--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -37,7 +37,7 @@
     <?php if ($this->isAllowedAvisDerogations): ?>
         <li class="<?= strpos($action_name, 'avis-derogations-etablissement') !== false ? 'active' : '' ?>">
             <a class='sep' href='<?= $this->url(array("action"=>"avis-derogations-etablissement")) ?>'>
-                <em class="icon-th-list icon-black"></em>
+                <em class="icon-file icon-black"></em>
                 Avis et dérogations
             </a>
         </li>
