Déplacement de l'information des avis & dérogations dans un onglet sur l'établissement (#41)
* ajout onglet avis et derogations dans etablissement

* Correction des autorisations

* On ne retourne pas tout l'historique

* Ajout de la pastille verte

Co-authored-by: Maxime Merrien <maxime.merrien@atos.net>

--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -9,7 +9,7 @@
             Général
         </a>
     </li>
-    
+
     <?php if ($this->etablissement['informations']['LIBELLE_GENRE'] != 'Site') : ?>
         <li class="<?= strpos($action_name, 'textes-applicables') !== false ? 'active' : '' ?>">
             <a href='<?= $this->url(array("action"=>"textes-applicables")) ?>'>
@@ -24,7 +24,7 @@
             </a>
         </li>
     <?php endif ?>
-    
+
     <?php if ($this->isAllowedEffectifsDegagements): ?>
         <li class="<?= strpos($action_name, 'effectifs-degagements-etablissement') !== false ? 'active' : '' ?>">
             <a class='sep' href='<?= $this->url(array("action"=>"effectifs-degagements-etablissement")) ?>'>
@@ -33,6 +33,20 @@
             </a>
         </li>
     <?php endif ?>
+
+    <?php if ($this->isAllowedAvisDerogations): ?>
+        <li class="<?= strpos($action_name, 'avis-derogations-etablissement') !== false ? 'active' : '' ?>">
+            <a class='sep' href='<?= $this->url(array("action"=>"avis-derogations-etablissement")) ?>'>
+                <em class="icon-file icon-black"></em>
+                Avis et dérogations
+
+                <?php if($this->hasAvisDerogations): ?>
+                    <div class="greenCircle pull-right"></div>
+                <?php endif ?>
+            </a>
+        </li>
+    <?php endif ?>
+
 
     <li class="<?= $action_name == 'pieces-jointes' ? 'active' : '' ?>">
         <a href='<?= $this->url(array("action"=>"pieces-jointes")) ?>'>
@@ -65,7 +79,7 @@
             Ajouter un dossier
         </a>
     </li>
-    
+
     <?php if ($this->is_allowed_delete_etablissement): ?>
         <li>
             <a id="suppressionEtablissement" href="#">
@@ -87,7 +101,7 @@
             <?php foreach ($this->etablissement['parents'] as $etablissement) : ?>
                 <a href='/etablissement/index/id/<?=  $etablissement["ID_ETABLISSEMENT"] ?>'>
                     <?= $etablissement["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
-                </a> - 
+                </a> -
             <?php endforeach ?>
         <?php endif ?>
         <?= file_exists(APPLICATION_PATH . DS . '..' . DS . 'public' . DS . 'images' . DS . 'types' . DS . 'b' . DS . 'icone-type-' . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . '.png') ? "<img src='/images/types/b/icone-type-" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . ".png' title='" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . "' />" : ''; ?>
@@ -107,7 +121,7 @@
             Présence d'un dossier avec avis differé
         </p>
     <?php elseif ($this->etablissement['avis'] != null) : ?>
-    
+
          <?php if ($this->etablissement['avis'] == 1 && $this->avis == "avisDoss") : ?>
             <p class="avis F">Favorable <?= $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?></p>
          <?php elseif ($this->etablissement['avis'] == 2  && $this->avis == "avisDoss") : ?>
@@ -120,9 +134,9 @@
          <?php else : ?>
             <p class="avis">Avis d'exploitation indisponible</p>
          <?php endif ?>
-        
+
     <?php endif ?>
-    
+
     <!-- Présence de risques naturels ou technologiques-->
     <?php if (!empty($this->etablissement['general']['DESCTECH_RISQUES_NATURELS_ETABLISSEMENT'])) : ?>
         <p class='label label-warning'>
